@@ -1,3 +1,8 @@
+2004-01-08  Glynn Foster  <glynn.foster@sun.com>
+
+	* GNOME_SettingsDaemon.server.in: Remove from CVS since it's
+	a generated file.
+
 2003-12-30  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.1.1
